--- a/css/styles.css
+++ b/css/styles.css
@@ -125,10 +125,19 @@ body{
 .senior{
   font-size: 18px;
   line-height: 24px;  
-  color: #2B3939;
   margin: 0;
   padding: 0;
   margin-bottom: 8px;
+}
+
+.senior a{
+  text-decoration: none;
+  color: #2B3939;
+}
+.senior a:hover{
+  text-decoration: none;
+  color: #5CA5A5;
+
 }
 
 .photosnap-left-up{
@@ -202,6 +211,7 @@ body{
   background-color: #EFFAFA;
   color: #5CA5A5;
   border-radius: 5px;
+  cursor: pointer;
   transition: background-color 0.5s ease,color 0.5s ease;
 }
 
